--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "engines": {
     "node": "6.x"
   },
+  "scripts": {
+    "start": "node server.js"
+  },
   "private": true,
   "dependencies": {
-    "axios": "^1.4.0",
     "body-parser": "^1.20.1",
     "express": "4.x"
   }
