--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.20.1",
-    "express": "4.x"
+    "express": "4.x",
+    "node-fetch": "^2.6.1"
   }
 }
