--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "node": "6.x"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest"
   },
   "private": true,
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "4.x",
     "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
